fixes caption alignment

--- a/client/styles/_base.sass
+++ b/client/styles/_base.sass
@@ -41,11 +41,18 @@ main
     margin: 0
     display: flex
     flex-direction: column
+    align-items: center
     font-family: $font
     animation: content-no-scroll 0.35s ease-out
     section
         min-height: 80vh
         margin: $spacer-4
+        width: 100%
+        box-sizing: border-box
+        flex: 1
+        display: flex
+        flex-direction: column
+        align-content: center
         padding: $spacer-3
         align-self: center
         max-width: $max-content-width
@@ -57,6 +64,7 @@ main
             margin: $spacer-2 $spacer-3
         @media all and (min-width: 825px)
             margin: $spacer-3 $spacer-4
+            width: 90vw
         @media all and (min-width: 900px)
             padding: $spacer-3 $spacer-4
         .section-title, h2
