--- a/client/styles/_blog.sass
+++ b/client/styles/_blog.sass
@@ -9,14 +9,21 @@
    
 .blog-wrapper
     article
+        max-width: 1000px
         display: flex
         flex-direction: column
         h3
-            font-size: $text-4
-            line-height: calc(1.4 * $text-4)
+            font-size: $text-5
+            line-height: calc(1.1 * $text-5)
+            margin-top: $spacer-6
         h4
             font-size: $text-3
             line-height: calc(1.4 * $text-3)
+            margin: $spacer-3 0
+        .post-body-wrapper
+            height: 100%
+            display: flex
+            flex-direction: column
         ul
             list-style: none
         .date-posted
@@ -27,8 +34,17 @@
         .link-text
             font-size: $text-1
             line-height: calc(1.4 * $text-1)
-            margin-bottom: 50px
         a
             font-weight: bold
             &:hover, &:focus, &:active
                 color: $colors-accent-2
+        p:last-of-type
+            padding-bottom: 0
+        figcaption
+            font-size: $text-1
+            line-height: calc(1.4 * $text-1)
+            align-self: center
+            text-align: center
+            margin-top: $spacer-1
+        figure
+            margin: $spacer-2 0 $spacer-3
